<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".listViewActivity">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/search_vector"
        app:actionLayout="@layout/search_menu_item_layout"
        app:showAsAction="always|withText|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_todolist"
        android:title="@string/action_todolist"
        android:icon="@drawable/to_do_list_vector"
        app:actionLayout="@layout/todolist_menu_item_layout"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_selection"
        android:title="@string/action_selection"
        android:icon="@drawable/selection_vector"
        app:actionLayout="@layout/selection_menu_item_layout"
        app:showAsAction="always">
    </item>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:actionLayout="@layout/activity_list_view"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>