<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/newTask"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="createTask"
        android:text="@string/newTask"
        android:background="@drawable/button" />
    <Button
        android:id="@+id/newEvent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="createEvent"
        android:text="@string/newEvent"
        android:layout_below="@id/newTask"
        android:background="@drawable/button" />
    <Button
        android:id="@+id/newMemo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="createMemo"
        android:text="@string/newMemo"
        android:layout_below="@id/newEvent"
        android:background="@drawable/button" />


</RelativeLayout>
