<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/display_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/display_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/display"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_centerHorizontal="true"/>

                <LinearLayout
                    android:id="@+id/display_checkboxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/display_title"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <CheckBox
                        android:id="@+id/task_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tasks"
                        android:onClick="onSelectionCheckboxClicked"/>

                    <CheckBox
                        android:id="@+id/event_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events"
                        android:onClick="onSelectionCheckboxClicked" />

                    <CheckBox
                        android:id="@+id/memo_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/memos"
                        android:onClick="onSelectionCheckboxClicked" />

                    <CheckBox
                        android:id="@+id/checked_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checked_items"
                        android:layout_marginTop="10dp"
                        android:onClick="onSelectionCheckboxClicked"/>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:id="@+id/horizontal_line"
                android:background="#000000"
                android:layout_width = "150dp"
                android:layout_height="1dp"
                android:layout_below="@id/display_dialog"
                android:layout_centerHorizontal="true"/>

            <RelativeLayout
                android:id="@+id/list_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/horizontal_line"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lists"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_centerHorizontal="true"/>

                <GridLayout
                    android:id="@+id/list_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/list_title"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:columnCount="2"
                    android:useDefaultMargins="true">

                    <!-- Button
                        android:id="@+id/list_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/listA"
                        android:background="@android:color/holo_red_light" />

                    <Button
                        android:id="@+id/list_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/listB"
                        android:background="@android:color/holo_purple"/-->
                </GridLayout>
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>