<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tpt.igr203.alita.todolist.viewEvent"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:onClick="back"
                android:layout_marginRight="15dp"
                android:fontFamily="Montserrat"
                android:textColor="#000000"
                android:textSize="13sp"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="save"
                android:text="@string/save"
                android:layout_marginLeft="15dp"
                android:fontFamily="Montserrat"
                android:textColor="#000000"
                android:textSize="13sp"
                android:background="@drawable/button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Name"
                android:id="@+id/nameEvent"
                android:fontFamily="Montserrat"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From "
                android:fontFamily="Montserrat"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:id="@+id/dateBegin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" at "
                android:fontFamily="Montserrat"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:id="@+id/hourBegin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To "
                android:fontFamily="Montserrat"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:id="@+id/dateEnd"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" at "
                android:fontFamily="Montserrat"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:id="@+id/hourEnd"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Importance "
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                />
            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/add"
                android:visibility="visible"
                android:id="@+id/addImpEvent"
                android:onClick="addImp"
                android:layout_margin="5dp"
                android:fontFamily="Montserrat"
                android:textColor="#000000"
                android:textSize="13sp"
                android:background="@drawable/button"/>
            <SeekBar
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/impEvent"
                android:max="10"
                android:min="1"/>
            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/remove"
                android:textColor="#000000"
                android:textSize="13sp"
                android:background="@drawable/button"
                android:id="@+id/remImpEvent"
                android:visibility="gone"
                android:layout_margin="5dp"
                android:onClick="remImp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reminder "
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>
            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/add"
                android:visibility="visible"
                android:id="@+id/addRapEvent"
                android:onClick="addRap"
                android:layout_margin="5dp"
                android:fontFamily="Montserrat"
                android:textColor="#000000"
                android:textSize="13sp"
                android:background="@drawable/button"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerReminder"
                android:entries="@array/array_reminder"
                android:visibility="gone">
            </Spinner>
            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/remove"
                android:textColor="#000000"
                android:textSize="13sp"
                android:background="@drawable/button"
                android:id="@+id/remRapEvent"
                android:visibility="gone"
                android:layout_margin="5dp"
                android:onClick="remRap"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notes"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>
            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/add"
                android:visibility="visible"
                android:id="@+id/addNoteEvent"
                android:onClick="addNote"
                android:layout_margin="5dp"
                android:fontFamily="Montserrat"
                android:textColor="#000000"
                android:textSize="13sp"
                android:background="@drawable/button"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Write your notes"
                android:visibility="gone"
                android:id="@+id/noteEvent"/>
            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/remove"
                android:textColor="#000000"
                android:textSize="13sp"
                android:background="@drawable/button"
                android:id="@+id/remNoteEvent"
                android:visibility="gone"
                android:layout_margin="5dp"
                android:onClick="remNote"
                />
        </LinearLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show in the calendar"
            android:id="@+id/showCalendar"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:onClick="deleteEvent"
            android:src="@drawable/delete_img"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:background="@drawable/delete_img"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
